Implemented registering new user to the authentication api database for using the oauth2 service
